k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory-pwa
  labels:
    name: memory-pwa
    app: memory-pwa
